--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,15 @@ body {
 
 .section_opening {
     display: flex;
+    height: 712px;
+    width: 1352px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     margin-top: 130px;
     background: url("../images/Background.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
     color: var(--main-font-color);
 }
 
@@ -97,6 +101,16 @@ body {
 }
 
 .cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 440px;
-
+    height: 67px;
+    background-color: var(--secondary-color);
+    border-radius: 50px;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--main_color);
+    font-weight: bold;
 }
